pi-kubernetes-cluster/applications/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-trailing-slash
  namespace: traefik
spec:
  redirectRegex:
    regex: "^(https?://[^/]+/[^/]+)$"
    replacement: "${1}/"
    permanent: true
